--- a/wrench/reftests/blend/multiply-2.yaml
+++ b/wrench/reftests/blend/multiply-2.yaml
@@ -1,16 +1,13 @@
 ---
 root:
   items:
-        -
+        - type: rect
           bounds: [0, 0, 100, 100]
-          type: rect
           color: [0, 255, 0]
-        -
+        - type: stacking_context
           bounds: [0, 0, 100, 100]
-          type: stacking_context
           mix-blend-mode: multiply
           items:
-            -
+            - type: rect
               bounds: [0, 0, 100, 100]
-              type: rect
               color: [255, 128, 0]
