--- a/wrench/reftests/mask/green.yaml
+++ b/wrench/reftests/mask/green.yaml
@@ -1,7 +1,6 @@
 ---
 root:
   items:
-        - 
+        - type: rect
           bounds: [0, 0, 95, 88]
-          type: rect
           color: green
