--- a/wrench/reftests/mask/mask.yaml
+++ b/wrench/reftests/mask/mask.yaml
@@ -1,9 +1,8 @@
 ---
 root:
   items:
-    -
+    - type: rect
       bounds: [0, 0, 95, 88]
-      type: rect
       color: blue
       clip:
         image_mask:
