--- a/wrench/reftests/blend/darken.yaml
+++ b/wrench/reftests/blend/darken.yaml
@@ -1,16 +1,13 @@
 ---
 root:
   items:
-        -
+        - type: rect
           bounds: [0, 0, 100, 100]
-          type: rect
           color: [10, 20, 30]
-        -
+        - type: stacking_context
           bounds: [0, 0, 100, 100]
-          type: stacking_context
           mix-blend-mode: darken
           items:
-            -
+            - type: rect
               bounds: [0, 0, 100, 100]
-              type: rect
               color: [30, 20, 10]
