--- a/wrench/reftests/blend/difference-ref.yaml
+++ b/wrench/reftests/blend/difference-ref.yaml
@@ -1,7 +1,6 @@
 ---
 root:
   items:
-        -
+        - type: rect
           bounds: [0, 0, 100, 100]
-          type: rect
           color: [0, 0, 0]
