--- a/wrench/reftests/filters/filter-grayscale.yaml
+++ b/wrench/reftests/filters/filter-grayscale.yaml
@@ -1,12 +1,10 @@
 ---
 root:
   items:
-        -
+        - type: stacking_context
           bounds: [10, 10, 200, 200]
-          type: stacking_context
           filters: grayscale(1)
           items:
-            -
+            - type: rect
               bounds: [0, 0, 200, 200]
-              type: rect
               color: [0, 255, 0]
