--- a/wrench/reftests/mask/mask-ref.yaml
+++ b/wrench/reftests/mask/mask-ref.yaml
@@ -1,11 +1,9 @@
 ---
 root:
   items:
-    - 
+    - type: stacking_context
       bounds: [0, 0, 95, 88]
       items:
-        - 
+        - type: rect
           bounds: [9, 9, 10, 10]
-          type: rect
           color: blue
-      type: stacking_context
