--- a/wrench/reftests/mask/mask-transformed-to-empty-rect.yaml
+++ b/wrench/reftests/mask/mask-transformed-to-empty-rect.yaml
@@ -1,15 +1,14 @@
 ---
 root:
   items:
-    -
+    - type: stacking_context
       clip: [0, 0, 300, 300]
-      type: stacking_context
       bounds: [0, 0, 300, 300]
       "scroll-policy": scrollable
       z_index: 4
       transform: [1, 0, 0, 0, 0, 0, 1, 0, 0, -1, 0, 0, 0, 150, -150, 1]
       items:
-        -
+        - type: scroll_layer
           bounds: [0, 0, 300, 300]
           clip:
             rect: [0, 0, 300, 300]
@@ -20,16 +19,13 @@ root:
               image: "tiny-check-mask.png"
               rect: [0, 0, 300, 300]
               repeat: false
-          type: scroll_layer
           "content-size": [300, 300]
           id: 1
           items:
-            -
+            - type: rect
               bounds: [0, 0, 300, 300]
               clip: [0, 0, 300, 300]
-              type: rect
               color: 0 128 0 1.0000
-    -
+    - type: rect
       bounds: [0, 0, 100, 100]
-      type: rect
       color: 0 255 0 1.0
