--- a/wrench/reftests/mask/nested-mask.yaml
+++ b/wrench/reftests/mask/nested-mask.yaml
@@ -1,8 +1,7 @@
 ---
 root:
   items:
-    - 
-      type: scroll_layer
+    - type: scroll_layer
       bounds: [0, 0, 95, 88]
       content-size: [95, 88]
       clip:
@@ -12,8 +11,7 @@ root:
           repeat: false
         rect: [0, 0, 95, 88]
       items:
-        - 
-          type: scroll_layer
+        - type: scroll_layer
           bounds: [0, 0, 95, 88]
           content-size: [95, 88]
           clip:
@@ -23,7 +21,6 @@ root:
               repeat: false
             rect: [0, 0, 95, 88]
           items:
-           - 
-            bounds: [0, 0, 95, 88]
-            type: rect
-            color: blue
+            - type: rect
+              bounds: [0, 0, 95, 88]
+              color: blue
