--- a/wrench/reftests/scrolling/root-scroll.yaml
+++ b/wrench/reftests/scrolling/root-scroll.yaml
@@ -3,7 +3,6 @@ root:
   clip: [0, 0, 1024, 10000]
   scroll-offset: [0, 100]
   items:
-    -
-      type: rect
+    - type: rect
       bounds: [10, 110, 50, 50]
       color: green
