--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wrench"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
 build = "build.rs"
 license = "MPL-2.0"
@@ -22,19 +22,14 @@ time = "0.1"
 crossbeam = "0.2"
 osmesa-sys = { version = "0.1.2", optional = true }
 osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
+webrender = {path = "../webrender"}
+webrender_traits = {path = "../webrender_traits"}
 
 [features]
 headless = [ "osmesa-sys", "osmesa-src" ]
 
-[dependencies.webrender]
-path = "../webrender"
-
-[dependencies.webrender_traits]
-path = "../webrender_traits"
-default_features = false
-
 [target.'cfg(target_os = "windows")'.dependencies]
-dwrote = "0.2"
+dwrote = "0.3"
 
 [target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
 font-loader = "0.1.4"
