Add `png' command to save the result of a yaml file

--- a/wrench/src/args.yaml
+++ b/wrench/src/args.yaml
@@ -52,6 +52,13 @@ args:
       help: Enable vsync for OpenGL window
 
 subcommands:
+    - png:
+        about: render frame described by YAML and save it to a png file
+        args:
+          - INPUT:
+              help: The input YAML file
+              required: true
+              index: 1
     - show:
         about: show frame(s) described by YAML
         args:
