Make perspective and transform Option types
CSS makes a distinction between an identity transform and an empty
transform. For instance, stacking contexts with identity
transformations still create what we call reference frames, which means
they serve as coordinates spaces for fixed position elements. This will
also help us to properly assign ScrollLayerIds during display list
construction if we want.

--- a/wrench/reftests/scrolling/fixed-position-ref.yaml
+++ b/wrench/reftests/scrolling/fixed-position-ref.yaml
@@ -6,3 +6,12 @@ root:
     - type: rect
       bounds: [60, 0, 50, 50]
       color: green
+    - type: rect
+      bounds: [120, 0, 50, 50]
+      color: green
+    - type: rect
+      bounds: [180, 0, 50, 50]
+      color: green
+    - type: rect
+      bounds: [240, 0, 50, 50]
+      color: green
