--- a/wrench/reftests/scrolling/scroll-layer-with-mask-ref.yaml
+++ b/wrench/reftests/scrolling/scroll-layer-with-mask-ref.yaml
@@ -3,3 +3,6 @@ root:
     - type: rect
       bounds: [20, 20, 80, 80]
       color: green
+    - type: rect
+      bounds: [120, 20, 80, 80]
+      color: green
