--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -10,8 +10,8 @@ base64 = "0.3"
 bincode = "1.0.0-alpha2"
 byteorder = "1.0"
 euclid = "0.11"
-gleam = "0.2"
-glutin = "0.7"
+gleam = "0.4"
+servo-glutin = "0.10"
 app_units = "0.4"
 image = "0.12"
 clap = { version = "2", features = ["yaml"] }
