--- a/wrench/reftests/gradient/premultiplied-radial.yaml
+++ b/wrench/reftests/gradient/premultiplied-radial.yaml
@@ -6,8 +6,6 @@ root:
       items:
         - type: radial-gradient
           bounds: 0 0 200 200
-          start-center: 100 100
-          start-radius: 0
-          end-center: 100 100
-          end-radius: 200
+          center: 100 100
+          radius: 200 200
           stops: [0.0, [128, 128, 128, 0.5], 1.0, [128, 128, 128, 0.5]]
