--- a/wrench/reftests/border/border-radial-gradient-simple-ref.yaml
+++ b/wrench/reftests/border/border-radial-gradient-simple-ref.yaml
@@ -4,67 +4,51 @@ root:
     - type: stacking-context
       bounds: [0, 0, 50, 50]
       items:
-        - type: complex-radial-gradient # top left
+        - type: radial-gradient # top left
           bounds: [ 0, 0, 10, 10]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
-        - type: complex-radial-gradient # top right
+        - type: radial-gradient # top right
           bounds: [ 40, 0, 10, 10]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
-        - type: complex-radial-gradient # bottom left
+        - type: radial-gradient # bottom left
           bounds: [ 0, 40, 10, 10]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
-        - type: complex-radial-gradient # bottom right
+        - type: radial-gradient # bottom right
           bounds: [ 40, 40, 10, 10]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
-        - type: complex-radial-gradient # top
+        - type: radial-gradient # top
           bounds: [ 10, 0, 30, 10]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
-        - type: complex-radial-gradient # right
+        - type: radial-gradient # right
           bounds: [ 40, 10, 10, 30]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
-        - type: complex-radial-gradient # bottom
+        - type: radial-gradient # bottom
           bounds: [ 10, 40, 30, 10]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
-        - type: complex-radial-gradient # left
+        - type: radial-gradient # left
           bounds: [ 0, 10, 10, 30]
-          start-center: [ 25, 25 ]
-          start-radius: 15
-          end-center: [ 25, 25 ]
-          end-radius: 35
+          center: [ 25, 25 ]
+          radius: [ 35, 35 ]
           stops: [ 0.0, red, 1.0, green ]
           repeat: false
