--- a/wrench/benchmarks/radial-gradient.yaml
+++ b/wrench/benchmarks/radial-gradient.yaml
@@ -1,59 +1,59 @@
 ---
 root:
   items:
-    - type: radial_gradient
+    - type: radial-gradient
       bounds: [ 0, 0, 1980, 1080]
-      start_center: [ 990, 540 ]
-      start_radius: 5
-      end_center: [ 990, 540 ]
-      end_radius: 8000
+      start-center: [ 990, 540 ]
+      start-radius: 5
+      end-center: [ 990, 540 ]
+      end-radius: 8000
       stops: [ 0.0, black, 1.0, white ]
       repeat: false
-    - type: radial_gradient
+    - type: radial-gradient
       bounds: [ 0, 0, 1980, 1080]
-      start_center: [ 990, 540 ]
-      start_radius: 5
-      end_center: [ 990, 540 ]
-      end_radius: 8000
+      start-center: [ 990, 540 ]
+      start-radius: 5
+      end-center: [ 990, 540 ]
+      end-radius: 8000
       stops: [ 0.0, black, 1.0, white ]
       repeat: false
-    - type: radial_gradient
+    - type: radial-gradient
       bounds: [ 0, 0, 1980, 1080]
-      start_center: [ 990, 540 ]
-      start_radius: 5
-      end_center: [ 990, 540 ]
-      end_radius: 8000
+      start-center: [ 990, 540 ]
+      start-radius: 5
+      end-center: [ 990, 540 ]
+      end-radius: 8000
       stops: [ 0.0, black, 1.0, white ]
       repeat: false
-    - type: radial_gradient
+    - type: radial-gradient
       bounds: [ 0, 0, 1980, 1080]
-      start_center: [ 990, 540 ]
-      start_radius: 5
-      end_center: [ 990, 540 ]
-      end_radius: 8000
+      start-center: [ 990, 540 ]
+      start-radius: 5
+      end-center: [ 990, 540 ]
+      end-radius: 8000
       stops: [ 0.0, black, 1.0, white ]
       repeat: false
-    - type: radial_gradient
+    - type: radial-gradient
       bounds: [ 0, 0, 1980, 1080]
-      start_center: [ 990, 540 ]
-      start_radius: 5
-      end_center: [ 990, 540 ]
-      end_radius: 8000
+      start-center: [ 990, 540 ]
+      start-radius: 5
+      end-center: [ 990, 540 ]
+      end-radius: 8000
       stops: [ 0.0, black, 1.0, white ]
       repeat: false
-    - type: radial_gradient
+    - type: radial-gradient
       bounds: [ 0, 0, 1980, 1080]
-      start_center: [ 990, 540 ]
-      start_radius: 5
-      end_center: [ 990, 540 ]
-      end_radius: 8000
+      start-center: [ 990, 540 ]
+      start-radius: 5
+      end-center: [ 990, 540 ]
+      end-radius: 8000
       stops: [ 0.0, black, 1.0, white ]
       repeat: false
-    - type: radial_gradient
+    - type: radial-gradient
       bounds: [ 0, 0, 1980, 1080]
-      start_center: [ 990, 540 ]
-      start_radius: 5
-      end_center: [ 990, 540 ]
-      end_radius: 8000
+      start-center: [ 990, 540 ]
+      start-radius: 5
+      end-center: [ 990, 540 ]
+      end-radius: 8000
       stops: [ 0.0, black, 1.0, white ]
       repeat: false
