--- a/wrench/reftests/border/border-groove-simple-ref.yaml
+++ b/wrench/reftests/border/border-groove-simple-ref.yaml
@@ -1,7 +1,7 @@
 ---
 root:
   items:
-    - type: stacking_context
+    - type: stacking-context
       bounds: [0, 0, 50, 50]
       items:
         - type: border
@@ -10,7 +10,7 @@ root:
           border-type: normal
           style: [ solid, solid, solid, solid ]
           color: [ 0 0 178 1.0, 0 0 178 1.0, 0 0 255 1.0, 0 0 255 1.0 ]
-    - type: stacking_context
+    - type: stacking-context
       bounds: [6, 6, 38, 38]
       items:
         - type: border
