--- a/wrench/reftests/gradient/norm-linear-degenerate-ref.yaml
+++ b/wrench/reftests/gradient/norm-linear-degenerate-ref.yaml
@@ -4,8 +4,8 @@ root:
     - type: stacking-context
       bounds: 50 50 300 300
       items:
-        - type: radial-gradient
+        - type: gradient
           bounds: 0 0 300 300
-          center: 150 150
-          radius: 200 200
-          stops: [0, red, 1, blue]
+          start: 0 150
+          end: 300 150
+          stops: [0.0, red, 1.0, red]
