--- a/wrench/reftests/gradient/norm-radial-degenerate-ref.yaml
+++ b/wrench/reftests/gradient/norm-radial-degenerate-ref.yaml
@@ -7,5 +7,5 @@ root:
         - type: radial-gradient
           bounds: 0 0 300 300
           center: 150 150
-          radius: 200 200
-          stops: [0, red, 1, blue]
+          radius: 150 150
+          stops: [0.0, red, 1.0, red]
