Fix the way that clip positioning is specified
Make the way that clip positions are specified a bit more predictable.
Now the display item bounds are the "content bounds," which specify the
location and size of the content that goes inside this clip. The clip
coordinates are specified relative to this location, while the content
size is only used for scrolling.

Currently we only support clips rectangles that start at the origin of
the content, which is equivalent to the capabilities we had before.
Later we can add this functionality, if it is necessary.

Also, add a test for this as well as updating all reftest files to
reflect the new arguments.

--- a/wrench/reftests/scrolling/scroll-layer-with-mask.yaml
+++ b/wrench/reftests/scrolling/scroll-layer-with-mask.yaml
@@ -10,7 +10,6 @@ root:
       items:
       - type: scroll-layer
         bounds: [0, 0, 100, 100]
-        content-size: [100, 100]
         clip:
           rect: [0, 0, 100, 100]
           image-mask:
@@ -29,10 +28,10 @@ root:
       scroll-policy: scrollable
       items:
       - type: scroll-layer
-        bounds: [10, 10, 100, 100]
-        content-size: [100, 300]
+        bounds: [10, 10, 100, 300]
         scroll-offset: [0, 100]
         clip:
+          rect: [0, 0, 100, 100]
           image-mask:
             image: "mask.png"
             rect: [0, 0, 100, 100]
@@ -41,3 +40,20 @@ root:
         - type: rect
           bounds: [0, 0, 100, 200]
           color: green
+
+    # Same as the previous case, but this time we verify that a scroll layer that is
+    # not at the origin works as well.
+    -
+      type: scroll-layer
+      bounds: [210, 10, 100, 300]
+      scroll-offset: [0, 100]
+      clip:
+        rect: [0, 0, 100, 100]
+        image-mask:
+          image: "mask.png"
+          rect: [0, 0, 100, 100]
+          repeat: false
+      items:
+      - type: rect
+        bounds: [210, 10, 100, 200]
+        color: green
