--- a/wrench/reftests/scrolling/scroll-layer.yaml
+++ b/wrench/reftests/scrolling/scroll-layer.yaml
@@ -1,8 +1,8 @@
 root:
   items:
     - type: scroll-layer
-      bounds: [0, 0, 100, 100]
-      content-size: [1000, 1000]
+      bounds: [0, 0, 1000, 1000]
+      clip: [0, 0, 100, 100]
       scroll-offset: [50, 50]
       items:
         - type: rect
