--- a/wrench/reftests/mask/aligned-layer-rect.yaml
+++ b/wrench/reftests/mask/aligned-layer-rect.yaml
@@ -2,16 +2,12 @@
 root:
   items:
     - type: scroll-layer
-      bounds: [0, 0, 95, 88]
-      content-size: [95, 88]
-      clip:
-        rect: [9, 9, 10, 10]
+      bounds: [9, 9, 95, 88]
+      clip: [0, 0, 10, 10]
       items:
         - type: scroll-layer
           bounds: [0, 0, 95, 88]
-          content-size: [95, 88]
-          clip:
-              rect: [0, 0, 100, 100]
+          clip: [0, 0, 100, 100]
           items:
             - type: rect
               bounds: [0, 0, 100, 100]
