Run reftests with subpixel-aa turned on.
This is the configuration that Gecko is currently using and the
configuration that we'd like to end up in so it makes sense to switch
now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ script:
   - if [ $BUILD_KIND = DEBUG ]; then (cd sample && cargo test --verbose); fi
   - if [ $BUILD_KIND = DEBUG ]; then (cd sample && cargo build --verbose --features=profiler); fi
   - if [ $BUILD_KIND = DEBUG ]; then (cd wrench && cargo test --verbose); fi
-  - if [ $BUILD_KIND = RELEASE ]; then (cd wrench && python headless.py reftest); fi
+  - if [ $BUILD_KIND = RELEASE ]; then (cd wrench && python headless.py --subpixel-aa reftest); fi
