--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -16,7 +16,7 @@ app_units = "0.4"
 image = "0.12"
 clap = { version = "2", features = ["yaml"] }
 lazy_static = "0.2"
-yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
+yaml-rust = "0.3.5"
 serde_json = "0.9"
 time = "0.1"
 crossbeam = "0.2"
