--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -30,6 +30,7 @@ webrender_traits = {path = "../webrender_traits"}
 bitflags = "0.7"
 gamma-lut = "0.1"
 thread_profiler = "0.1.1"
+plane-split = {path = "../../plane-split"}
 
 [dev-dependencies]
 angle = {git = "https://github.com/servo/angle", branch = "servo"}
