--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -20,6 +20,7 @@ ipc-channel = {version = "0.7", optional = true}
 offscreen_gl_context = {version = "0.8", features = ["serde"], optional = true}
 serde = "0.9"
 serde_derive = "0.9"
+time = "0.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = "0.7"
