--- a/servo-tidy.toml
+++ b/servo-tidy.toml
@@ -3,13 +3,12 @@ skip-check-length = false
 skip-check-licenses = false
 
 [ignore]
-
+# Ignored packages with duplicated versions
+packages = ["yaml-rust"]
 # Files that are ignored for all tidy and lint checks.
 files = [
     # servo-tidy does not properly support workspaces yet.
     "./Cargo.toml",
-    # There are many duplicated packages, which we probably need to review one by one.
-    "./Cargo.lock",
     # We need to ensure that tidy's suggested options are okay for this script.
     "./wrench/test.sh",
 ]
