--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -22,6 +22,7 @@ serde = "0.9"
 serde_derive = "0.9"
 
 [target.'cfg(target_os = "macos")'.dependencies]
+core-foundation = "0.3"
 core-graphics = "0.7"
 
 [target.'cfg(target_os = "windows")'.dependencies]
