--- a/wrench/reftests/split/simple.yaml
+++ b/wrench/reftests/split/simple.yaml
@@ -1,4 +1,6 @@
-# this tests a simple intersection of 2 planes to split properly
+# This tests a simple intersection of 2 rotated planes to split properly.
+# If the split doesn't happen, we see a single-colored rectangle.
+# If it does, the rectangle gets split vertically in 2 parts of different colors.
 ---
 root:
   items:
