Premultiply gradient stop colors
CSS gradient stop colors are interpolated in premultiplied space.
Currently we assume that color stops that are passed in are
premultiplied, but because it's needed in both Servo and Gecko, it makes
sense to do the premultiplication in WebRender and expose a straight
alpha color like the rest of the API does.

The premultiplication is purposefully not done in DisplayListBuilder
to prevent it from being saved for replay and then premultiplied again
when we replay the display list.

--- a/wrench/reftests/gradient/premultiplied-radial.yaml
+++ b/wrench/reftests/gradient/premultiplied-radial.yaml
@@ -4,5 +4,5 @@ root:
     - type: radial-gradient
       bounds: 50 50 200 200
       center: 100 100
-      radius: 200 200
-      stops: [0.0, [128, 128, 128, 0.5], 1.0, [128, 128, 128, 0.5]]
+      radius: 100 100
+      stops: [0.0, red, 0.5, [0.0, 0.0, 0.0, 0.0], 1.0, green]
