--- a/wrench/reftests/gradient/premultiplied-aligned.yaml
+++ b/wrench/reftests/gradient/premultiplied-aligned.yaml
@@ -5,4 +5,4 @@ root:
       bounds: 50 50 200 200
       start: 0 100
       end: 200 100
-      stops: [0.0, [128, 128, 128, 0.5], 1.0, [128, 128, 128, 0.5]]
+      stops: [0.0, red, 0.5, [0.0, 0.0, 0.0, 0.0], 1.0, green]
