--- a/wrench/reftests/gradient/premultiplied-angle.yaml
+++ b/wrench/reftests/gradient/premultiplied-angle.yaml
@@ -6,5 +6,5 @@ root:
       # offset the start and end points slightly so
       # we force the angle gradient shader
       start: 0 100
-      end: 200 100.001
-      stops: [0.0, [128, 128, 128, 0.5], 1.0, [128, 128, 128, 0.5]]
+      end: 200 100.000001
+      stops: [0.0, red, 0.5, [0.0, 0.0, 0.0, 0.0], 1.0, green]
