--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,13 @@ members = [
 
 [profile.release]
 debug = true
+
+[replace]
+"ipc-channel:0.7.2" = { git = "https://github.com/Eijebong/ipc-channel.git", branch="serde1.0" }
+"app_units:0.4.2" = { git = "https://github.com/Eijebong/app_units.git", branch="serde1.0" }
+"euclid:0.14.4" = { git = "https://github.com/Eijebong/euclid.git", branch="serde1.0" }
+"offscreen_gl_context:0.9.0" = { git = "https://github.com/Eijebong/rust-offscreen-rendering-context.git", branch="serde1.0" }
+"dwrote:0.3.0" = { git = "https://github.com/Eijebong/dwrote-rs.git", branch = "serde1.0" }
+"cocoa:0.8.1" = { git = "https://github.com/Eijebong/cocoa-rs.git", branch = "bump_graphics" }
+"font-loader:0.2.0" = { git = "https://github.com/Eijebong/rust-font-loader.git", branch = "bump_text" }
+"servo-glutin:0.10.2" = { git = "https://github.com/Eijebong/glutin.git", branch = "bump_graphics" }
