--- a/webrender_traits/Cargo.toml
+++ b/webrender_traits/Cargo.toml
@@ -12,20 +12,20 @@ webgl = ["offscreen_gl_context"]
 
 [dependencies]
 app_units = "0.4"
-bincode = "1.0.0-alpha2"
+bincode = "0.8"
 byteorder = "1.0"
 euclid = "0.14.4"
 gleam = "0.4.5"
 heapsize = ">= 0.3.6, < 0.5"
 ipc-channel = {version = "0.7.2", optional = true}
 offscreen_gl_context = {version = "0.9", features = ["serde"], optional = true}
-serde = "0.9"
-serde_derive = "0.9"
+serde = { version = "1.0", features = ["rc"] }
+serde_derive = "1.0"
 time = "0.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.3"
-core-graphics = "0.7"
+core-graphics = "0.8"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 dwrote = "0.3"
