--- a/wrench/Cargo.toml
+++ b/wrench/Cargo.toml
@@ -7,7 +7,7 @@ license = "MPL-2.0"
 
 [dependencies]
 base64 = "0.3"
-bincode = "1.0.0-alpha2"
+bincode = "0.8"
 byteorder = "1.0"
 env_logger = { version = "0.4", optional = true }
 euclid = "0.14.4"
@@ -18,15 +18,15 @@ image = "0.12"
 clap = { version = "2", features = ["yaml"] }
 lazy_static = "0.2"
 yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
-serde_json = "0.9"
+serde_json = "1.0"
 time = "0.1"
 crossbeam = "0.2"
 osmesa-sys = { version = "0.1.2", optional = true }
 osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
 webrender = {path = "../webrender"}
 webrender_traits = {path = "../webrender_traits"}
-serde_derive = "0.9"
-serde = "0.9"
+serde_derive = "1.0"
+serde = "1.0"
 
 [features]
 headless = [ "osmesa-sys", "osmesa-src" ]
