Remove the per-item complex clipping and masking from the API
This is the first step to getting all masking operations into the
ClipScrollTree. We don't completely this feature, as it's still sued
for the extra clips. These will be moved into the ClipScrollTree in a
later change. This change allows us to fully eliminate the
DisplayListBuilder::push_clip_region API and push its functionality
into the define_clip API.

Most of the changes here are:
  1. Changes to the examples, wrench, and reftests to match the new API.
  2. Adapting the "split rectangle clipped by rounded rect"
     optimization to use the ClipScrollTree. This is unfortunately a
     bit more complicated now, but now includes any rounded rect clip
     instead of per-item ones.

--- a/wrench/reftests/boxshadow/inset-border-radius-ref.yaml
+++ b/wrench/reftests/boxshadow/inset-border-radius-ref.yaml
@@ -4,12 +4,13 @@ root:
         - type: stacking-context
           bounds: [0, 0, 100, 100]
           items:
-            - type: box-shadow
-              bounds: [ 10, 10, 80, 80 ]
-              blur-radius: 25
-              clip-mode: inset
-              clip:
-                rect: [0, 0, 100, 100]
-                complex:
-                  - rect: [ 10, 10, 80, 80 ]
-                    radius: 10
+            - type: clip
+              bounds: [0, 0, 100, 100]
+              complex:
+                - rect: [ 10, 10, 80, 80 ]
+                  radius: 10
+              items:
+              - type: box-shadow
+                bounds: [ 10, 10, 80, 80 ]
+                blur-radius: 25
+                clip-mode: inset
