--- a/wrench/reftests/aa/rounded-rects.yaml
+++ b/wrench/reftests/aa/rounded-rects.yaml
@@ -5,34 +5,37 @@ root:
       bounds: 0 0 1000 1000
       type: stacking-context
       items:
-        -
-          bounds: 50 50 200 200
-          color: red
-          type: rect
-          clip:
-            complex:
-              - rect: [50, 50, 200, 200]
-                radius: 8
+        - type: clip
+          bounds: [50, 50, 200, 200]
+          complex:
+            - rect: [0, 0, 200, 200]
+              radius: 8
+          items:
+          - type: rect
+            bounds: 50 50 200 200
+            color: red
 
-        -
-          bounds: 270 50 200 200
-          color: green
-          type: rect
-          clip:
-            complex:
-              - rect: [270, 50, 200, 200]
-                radius: [16, 32, 48, 64]
+        - type: clip
+          bounds: [270, 50, 200, 200]
+          complex:
+            - rect: [0, 0, 200, 200]
+              radius: [16, 32, 48, 64]
+          items:
+          - type: rect
+            bounds: 270 50 200 200
+            color: green
 
-        -
-          bounds: 490 50 200 200
-          color: blue
-          type: rect
-          clip:
-            complex:
-              - rect: [490, 50, 200, 200]
-                radius: {
-                  top-left: [32, 16],
-                  top-right: [40, 24],
-                  bottom-left: [48, 64],
-                  bottom-right: [52, 80],
-                }
+        - type: clip
+          bounds: [490, 50, 200, 200]
+          complex:
+            - rect: [0, 0, 200, 200]
+              radius: {
+                top-left: [32, 16],
+                top-right: [40, 24],
+                bottom-left: [48, 64],
+                bottom-right: [52, 80],
+              }
+          items:
+          - type: rect
+            bounds: 490 50 200 200
+            color: blue
