--- a/wrench/reftests/border/degenerate-curve.yaml
+++ b/wrench/reftests/border/degenerate-curve.yaml
@@ -3,31 +3,26 @@ root:
   items: 
     - 
       bounds: [0, 0, 1024, 740]
-      clip: [0, 0, 0, 0]
       "clip-and-scroll": 0
       type: "stacking-context"
       "scroll-policy": scrollable
       "transform-style": flat
       items: 
-        - 
-          bounds: [28, 18, 144, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [28, 18, 144, 122]
-                radius: 
+        - type: clip
+          bounds: [0, 0, 1000, 1000]
+          complex:
+            - rect: [28, 18, 144, 122]
+              radius:
                   "top-left": [61, 61]
                   "top-right": [61, 61]
                   "bottom-left": [0, 0]
                   "bottom-right": [61, 61]
-          "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
+          items:
+          - type: rect
+            color: 255 0 0 1.0000
+            bounds: [28, 18, 144, 122]
         - 
           bounds: [28, 18, 144, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
-          "clip-and-scroll": 0
           type: border
           width: [18, 0, 18, 0]
           "border-type": normal
@@ -42,20 +37,17 @@ root:
             "top-right": [61, 61]
             "bottom-left": [0, 0]
             "bottom-right": [61, 61]
+        - type: clip
+          bounds: [0, 0, 1000, 1000]
+          complex:
+            - rect: [28, 160, 144, 122]
+              radius: [61, 61]
+          items:
+          - type: rect
+            bounds: [28, 160, 144, 122]
+            color: 255 0 0 1.0000
         - 
           bounds: [28, 160, 144, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [28, 160, 144, 122]
-                radius: [61, 61]
-          "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
-        - 
-          bounds: [28, 160, 144, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
           "clip-and-scroll": 0
           type: border
           width: [18, 0, 18, 0]
@@ -67,26 +59,22 @@ root:
             - solid
             - none
           radius: [61, 61]
-        - 
+        - type: clip
+          bounds: [0, 0, 1000, 1000]
+          complex:
+            - rect: [28, 302, 154, 122]
+              radius: 
+                "top-left": [0, 0]
+                "top-right": [61, 61]
+                "bottom-left": [0, 0]
+                "bottom-right": [61, 61]
+          items:
+          - type: rect
+            bounds: [28, 302, 154, 122]
+            color: 255 0 0 1.0000
+        - type: border
           bounds: [28, 302, 154, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [28, 302, 154, 122]
-                radius: 
-                  "top-left": [0, 0]
-                  "top-right": [61, 61]
-                  "bottom-left": [0, 0]
-                  "bottom-right": [61, 61]
           "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
-        - 
-          bounds: [28, 302, 154, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
-          "clip-and-scroll": 0
-          type: border
           width: [18, 0, 18, 10]
           "border-type": normal
           color: 
@@ -104,26 +92,22 @@ root:
             "top-right": [61, 61]
             "bottom-left": [0, 0]
             "bottom-right": [61, 61]
-        - 
+        - type: clip
+          bounds: [0, 0, 1000, 1000]
+          complex:
+            - rect: [202, 18, 144.03334, 122]
+              radius: 
+                "top-left": [61, 61]
+                "top-right": [61, 61]
+                "bottom-left": [0, 0]
+                "bottom-right": [61, 61]
+          items:
+            - type: rect
+              bounds: [202, 18, 144.03334, 122]
+              color: 255 0 0 1.0000
+        - type: border
           bounds: [202, 18, 144.03334, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [202, 18, 144.03334, 122]
-                radius: 
-                  "top-left": [61, 61]
-                  "top-right": [61, 61]
-                  "bottom-left": [0, 0]
-                  "bottom-right": [61, 61]
           "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
-        - 
-          bounds: [202, 18, 144.03334, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
-          "clip-and-scroll": 0
-          type: border
           width: [18, 0.016666668, 18, 0.016666668]
           "border-type": normal
           color: 
@@ -137,22 +121,18 @@ root:
             "top-right": [61, 61]
             "bottom-left": [0, 0]
             "bottom-right": [61, 61]
-        - 
+        - type: clip
           bounds: [202, 160, 144, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [202, 160, 144, 122]
-                radius: [61, 61]
-          "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
-        - 
+          complex:
+            - rect: [0, 0, 144, 122]
+              radius: [61, 61]
+          items:
+            - type: rect
+              bounds: [202, 160, 144, 122]
+              color: 255 0 0 1.0000
+        - type: border
           bounds: [202, 160, 144, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
           "clip-and-scroll": 0
-          type: border
           width: [18, 0, 18, 0]
           "border-type": normal
           color: 
@@ -162,24 +142,21 @@ root:
             - 255 0 0 1.0000
           style: solid
           radius: [61, 61]
+        - type: clip
+          bounds: [202, 302, 154, 122]
+          complex:
+            - rect: [0, 0, 154, 122]
+              radius: 
+                "top-left": [0, 0]
+                "top-right": [72, 72]
+                "bottom-left": [0, 0]
+                "bottom-right": [0, 0]
+          items:
+          - type: rect
+            bounds: [202, 302, 154, 122]
+            color: 255 0 0 1.0000
         - 
           bounds: [202, 302, 154, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [202, 302, 154, 122]
-                radius: 
-                  "top-left": [0, 0]
-                  "top-right": [72, 72]
-                  "bottom-left": [0, 0]
-                  "bottom-right": [0, 0]
-          "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
-        - 
-          bounds: [202, 302, 154, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
           "clip-and-scroll": 0
           type: border
           width: [18, 0, 18, 10]
@@ -199,20 +176,17 @@ root:
             "top-right": [72, 72]
             "bottom-left": [0, 0]
             "bottom-right": [0, 0]
+        - type: clip
+          bounds: [376, 18, 144, 122]
+          complex:
+            - rect: [0, 0, 144, 122]
+              radius: [61, 61]
+          items:
+          - type: rect
+            bounds: [376, 18, 144, 122]
+            color: 255 0 0 1.0000
         - 
           bounds: [376, 18, 144, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [376, 18, 144, 122]
-                radius: [61, 61]
-          "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
-        - 
-          bounds: [376, 18, 144, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
           "clip-and-scroll": 0
           type: border
           width: [18, 0, 18, 0]
@@ -228,17 +202,15 @@ root:
             - solid
             - hidden
           radius: [61, 61]
-        - 
+        - type: clip
           bounds: [376, 160, 144, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [376, 160, 144, 122]
-                radius: [61, 61]
-          "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
+          complex:
+            - rect: [0, 0, 144, 122]
+              radius: [61, 61]
+          items:
+          - type: rect
+            bounds: [376, 160, 144, 122]
+            color: 255 0 0 1.0000
         - 
           bounds: [376, 160, 144, 122]
           clip: [-17895698, -17895698, 35791396, 35791396]
@@ -257,24 +229,21 @@ root:
             - solid
             - none
           radius: [61, 61]
+        - type: clip
+          bounds: [376, 302, 144, 122]
+          complex:
+            - rect: [0, 0, 144, 122]
+              radius:
+                "top-left": [0, 0]
+                "top-right": [72, 72]
+                "bottom-left": [72, 72]
+                "bottom-right": [0, 0]
+          items:
+          - type: rect
+            bounds: [376, 302, 144, 122]
+            color: 255 0 0 1.0000
         - 
           bounds: [376, 302, 144, 122]
-          clip: 
-            rect: [-17895698, -17895698, 35791396, 35791396]
-            complex: 
-              - 
-                rect: [376, 302, 144, 122]
-                radius: 
-                  "top-left": [0, 0]
-                  "top-right": [72, 72]
-                  "bottom-left": [72, 72]
-                  "bottom-right": [0, 0]
-          "clip-and-scroll": 0
-          type: rect
-          color: 255 0 0 1.0000
-        - 
-          bounds: [376, 302, 144, 122]
-          clip: [-17895698, -17895698, 35791396, 35791396]
           "clip-and-scroll": 0
           type: border
           width: [18, 0, 18, 0]
