--- a/wrench/reftests/mask/aligned-layer-rect.yaml
+++ b/wrench/reftests/mask/aligned-layer-rect.yaml
@@ -2,12 +2,11 @@
 root:
   items:
     - type: scroll-layer
-      bounds: [9, 9, 95, 88]
-      clip: [0, 0, 10, 10]
+      bounds: [9, 9, 10, 10]
+      content-size: [95, 88]
       items:
         - type: scroll-layer
-          bounds: [0, 0, 95, 88]
-          clip: [0, 0, 100, 100]
+          bounds: [0, 0, 100, 100]
           items:
             - type: rect
               bounds: [0, 0, 100, 100]
