--- a/wrench/reftests/scrolling/clip-and-scroll-property.yaml
+++ b/wrench/reftests/scrolling/clip-and-scroll-property.yaml
@@ -3,22 +3,20 @@ root:
   items:
     -
       bounds: [0, 0, 200, 200]
-      clip: [0, 0, 0, 0]
       "clip-and-scroll": 0
       type: "stacking-context"
       "scroll-policy": scrollable
       items:
         -
           bounds: [0, 0, 200, 200]
-          clip: [0, 0, 200, 200]
           "clip-and-scroll": 0
           type: clip
           id: 1
         # Here we are testing that the clip-and-scroll property applies to
         # both stacking contexts and items.
         -
-          bounds: [0, 0, 200, 200]
-          clip: [0, 0, 0, 0]
+          bounds: [0, 0, 0, 0]
+          content-size: [200, 200]
           "clip-and-scroll": 1
           type: "stacking-context"
           "scroll-policy": scrollable
