--- a/wrench/reftests/scrolling/empty-mask.yaml
+++ b/wrench/reftests/scrolling/empty-mask.yaml
@@ -5,12 +5,14 @@ root:
       color: green
     - type: scroll-layer
       bounds: [0, 0, 100, 100]
-      clip:
-        rect: [0, 0, 0, 0]
-        complex:
-          - rect: [0, 0, 100, 100]
-            radius: 20
       items:
-        - type: rect
-          bounds: [0, 0, 500, 500]
-          color: red
+        - type: clip
+          bounds: [0, 0, 0, 0]
+          content-size: [100, 100]
+          complex:
+            - rect: [0, 0, 100, 100]
+              radius: 20
+          items:
+           - type: rect
+             bounds: [0, 0, 500, 500]
+             color: red
