--- a/wrench/reftests/scrolling/fixed-position-scrolling-clip.yaml
+++ b/wrench/reftests/scrolling/fixed-position-scrolling-clip.yaml
@@ -1,8 +1,8 @@
 root:
   items:
     - type: scroll-layer
-      bounds: [10, 10, 100, 700]
-      clip: [0, 0, 100, 300]
+      bounds: [10, 10, 100, 300]
+      content-size: [100, 700]
       id: 41
       scroll-offset: [0, 50]
       items:
@@ -13,7 +13,6 @@ root:
       # these items specify an auxiliary clip, they will be clipped by their sibling clip (42).
       - type: clip
         bounds: [10, 60, 50, 50]
-        clip: [0, 0, 50, 50]
         id: 42
       - type: stacking-context
         bounds: [10, 10, 100, 100]
