Update the backend to work with the modified push/pop text shadow interface.
This allows multiple text runs to be combined in to one shadow, and fixes
a few existing bugs encountered along the way. It doesn't (yet) support
other items in the text shadow, but the structures are in place to make
this easy to add.

--- a/wrench/reftests/text/shadow-complex.yaml
+++ b/wrench/reftests/text/shadow-complex.yaml
@@ -3,11 +3,13 @@ root:
   items:
         -
           type: "text-shadow"
+          bounds: [14, 18, 205, 35]
           blur-radius: 5
           offset: [0, 0]
           color: black
         -
           type: "text-shadow"
+          bounds: [14, 18, 205, 35]
           blur-radius: 0
           offset: [2, 3]
           color: red
@@ -22,6 +24,7 @@ root:
           type: "pop-text-shadow"
         -
           type: "text-shadow"
+          bounds: [14, 18, 205, 35]
           blur-radius: 3
           offset: [-2, 3.5]
           color: blue
