wrench: Use composite-op instead of mix-blend-mode in reftests.

--- a/wrench/reftests/blend/canvas.yaml
+++ b/wrench/reftests/blend/canvas.yaml
@@ -4,7 +4,7 @@ root:
         # the root stacking context should blend with the canvas background
         - type: stacking-context
           bounds: [0, 0, 100, 100]
-          mix-blend-mode: difference
+          composite-op: difference
           items:
             - type: rect
               bounds: [0, 0, 100, 100]
