--- a/wrench/reftests/blend/isolated-2.yaml
+++ b/wrench/reftests/blend/isolated-2.yaml
@@ -17,7 +17,7 @@ root:
           color: [0, 255, 0]
         - type: stacking-context
           bounds: [20, 20, 100, 100]
-          mix-blend-mode: multiply
+          composite-op: multiply
           items:
             - type: rect
               bounds: [0, 0, 100, 100]
