--- a/wrench/reftests/blend/isolated.yaml
+++ b/wrench/reftests/blend/isolated.yaml
@@ -11,7 +11,7 @@ root:
           items:
             - type: stacking-context
               bounds: [0, 0, 100, 100]
-              mix-blend-mode: difference
+              composite-op: difference
               items:
                 - type: rect
                   bounds: [0, 0, 100, 100]
