--- a/wrench/reftests/blend/multiply-2.yaml
+++ b/wrench/reftests/blend/multiply-2.yaml
@@ -6,7 +6,7 @@ root:
           color: [0, 255, 0]
         - type: stacking-context
           bounds: [0, 0, 100, 100]
-          mix-blend-mode: multiply
+          composite-op: multiply
           items:
             - type: rect
               bounds: [0, 0, 100, 100]
