--- a/wrench/reftests/blend/repeated-difference.yaml
+++ b/wrench/reftests/blend/repeated-difference.yaml
@@ -8,7 +8,7 @@ root:
         -
           bounds: [0, 0, 100, 100]
           type: stacking-context
-          mix-blend-mode: difference
+          composite-op: difference
           items:
             -
               bounds: [0, 0, 100, 100]
@@ -17,7 +17,7 @@ root:
             -
               bounds: [0, 0, 100, 100]
               type: stacking-context
-              mix-blend-mode: difference
+              composite-op: difference
               items:
                 -
                   bounds: [0, 0, 100, 100]
