Various improvements to benchmark mode, plus a glyph stress benchmark.
* Track the CPU backend time in benchmark mode.
* Add a glyph rendering stress test.
* Make subpixel AA default text mode in wrench.
* Rebuild display lists every frame in benchmark mode.

--- a/wrench/src/args.yaml
+++ b/wrench/src/args.yaml
@@ -24,10 +24,10 @@ args:
       long: save
       help: 'Save frames, one of: yaml, json, or binary'
       takes_value: true
-  - subpixel_aa:
+  - disable_subpixel_aa:
       short: a
-      long: subpixel-aa
-      help: Enable subpixel aa
+      long: disable-subpixel-aa
+      help: Disable subpixel aa
   - headless:
       short: h
       long: headless
