Switch hash table and maps to use FxHash instead of Fnv.
Also introduce a FastHashMap and FastHashSet type alias
that is used to allow easily benchmarking different hash
functions, and should be used for all HashMaps and HashSets
that are used by WR.

Some representative benchmarks below showing the total backend
CPU time for various hash types:

Wrench text benchmark
 Sip: 2.06 ms
 Fnv: 1.32 ms
 Fx:  1.12 ms

https://news.ycombinator.com
 Sip: 1.40 ms
 Fnv: 1.02 ms
 Fx:  0.92 ms

https://en.wikipedia.org/wiki/Rust
 Sip: 3.14 ms
 Fnv: 2.72 ms
 Fx:  2.39 ms

--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -18,7 +18,7 @@ bincode = "0.8"
 bit-set = "0.4"
 byteorder = "1.0"
 euclid = "0.15.1"
-fnv = "1.0"
+fxhash = "0.2.1"
 gleam = "0.4.7"
 lazy_static = "0.2"
 log = "0.3"
