Allow running taskcluster CI for PRs from non-collaborators

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -5,6 +5,7 @@
 # as needed.
 #
 version: 0
+allowPullRequests: public
 metadata:
   name: WebRender
   description: Runs WebRender tests in TaskCluster
